# mygeopy

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-docs.yaml  run-tests.yaml
src/mygeopy/: triangle.py
tests/: test_triangle.py
