# `./pyproject.toml`

# This file tries to follow the recommendations from:
# + <https://packaging.python.org/en/latest/guides/writing-pyproject-toml/>
[project]
name = "mygeopy"
dynamic = [ "version" ]
description = "Minimal Library With Examples in Bioinformatics"
authors = [
    { name = "Lucio Queiroz", email = "luciorqueiroz@gmail.com" }
]
maintainers = [
    { name = "luciorq", email = "luciorqueiroz@gmail.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = [
  # "LICEN[CS]E*",
  "LICENSE.txt",
  # include/"LICEN[CS]E*", # e.g. for vendored libraries
]
keywords = ["bioinformatics", "example"]
# For available Classifiers, see <https://pypi.org/classifiers/>
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    # "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
examples = [
#    "jupyter",
]
docs = [
    "mkdocs-material",
]
tests = [
    "pytest",
]

# Entrypoints for CLI tools
[project.scripts]
#my-cmd = "mygeopy:main"

# The labels (URL titles) below should follow PYPI recommendations:
# + <https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels>
# + This is important for projects that consume metadata.
# + Commented lines represent the recommended lables.
[project.urls]
homepage = "https://github.com/luciorq/mygeopy"
source = "https://github.com/luciorq/mygeopy"
# download = ""
# changelog = ""
# reloeasenotes = ""
documentation = "https://luciorq.github.io/mygeopy/"
issues = "https://github.com/luciorq/mygeopy/issues"
# funding = ""

# ============== END of project table ========================

# ========================================================================++++
# Build Systems
# ========================================================================++++
[build-system]
requires = [
  "hatchling",
  "hatch-vcs",
]
build-backend = "hatchling.build"

# ========================================================================++++
# Specialized Tools
# ========================================================================++++
[tool.hatch.version]
source = "vcs"
fallback_version = "0.0.0+nogit"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
mygeopy = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.tasks]
test = "python -m pytest"
# build = "python -m build"

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"
pip = ">=25.2,<26"

